--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "d3-scale": "^4.0.0",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.1",
+    "firebase-tools": "^9.16.0",
     "google-maps-react": "^2.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
